RunValidation/test/GEN-Run3Summer22wmLHEGS-00213.stdlog
000 (8360715.000.000) 06/03 10:09:33 Job submitted from host: <188.184.90.62:9618?addrs=188.184.90.62-9618+[2001-1458-201-e4--100-238]-9618&alias=bigbird16.cern.ch&noUDP&sock=schedd_3504972_d6e3>
...
040 (8360715.000.000) 06/03 10:11:11 Started transferring input files
	Transferring to host: <188.184.162.167:9618?addrs=188.184.162.167-9618+[2001-1458-301-4a--100-a1]-9618&alias=b7s11p8576.cern.ch&noUDP&sock=slot1_7_4812_3d3d_83404>
...
040 (8360715.000.000) 06/03 10:11:11 Finished transferring input files
...
001 (8360715.000.000) 06/03 10:11:12 Job executing on host: <188.184.162.167:9618?addrs=188.184.162.167-9618+[2001-1458-301-4a--100-a1]-9618&alias=b7s11p8576.cern.ch&noUDP&sock=startd_3282_c1ea>
...
006 (8360715.000.000) 06/03 10:11:24 Image size of job updated: 31784
	15  -  MemoryUsage of job (MB)
	15240  -  ResidentSetSize of job (KB)
...
006 (8360715.000.000) 06/03 10:14:18 Image size of job updated: 5668996
	15  -  MemoryUsage of job (MB)
	15240  -  ResidentSetSize of job (KB)
...
040 (8360715.000.000) 06/03 10:14:18 Started transferring output files
...
040 (8360715.000.000) 06/03 10:14:18 Finished transferring output files
...
005 (8360715.000.000) 06/03 10:14:18 Job terminated.
	(1) Normal termination (return value 0)
		Usr 0 00:02:07, Sys 0 00:00:18  -  Run Remote Usage
		Usr 0 00:00:00, Sys 0 00:00:00  -  Run Local Usage
		Usr 0 00:02:07, Sys 0 00:00:18  -  Total Remote Usage
		Usr 0 00:00:00, Sys 0 00:00:00  -  Total Local Usage
	43942  -  Run Bytes Sent By Job
	915  -  Run Bytes Received By Job
	43942  -  Total Bytes Sent By Job
	915  -  Total Bytes Received By Job
	Partitionable Resources :    Usage  Request Allocated 
	   Cpus                 :     0.34        4         4 
	   Disk (KB)            :  2543           1   3076036 
	   Memory (MB)          :    15        8192      8200 

	Job terminated of its own accord at 2023-06-03T08:14:18Z.
...
